--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -34,3 +34,28 @@ body{
   transition: var(--tran-05);
 }
 
+.frame-white, .frame-image {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  border-radius: 30px;
+  padding-top: 200px;
+  margin-bottom: 25px;
+  height: 97vh;
+}
+
+.frame-white {
+  background-color: white;
+  color: var(--body-color);
+}
+
+.section {
+  height: 97vh;
+  padding: 50px 50px;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
