--- a/frontend/src/app/pages/aboutus/aboutus.component.html
+++ b/frontend/src/app/pages/aboutus/aboutus.component.html
@@ -1,7 +1,4 @@
-<!--<div class="frame-white" id="contact-panel">-->
-<!--  <h1>hello</h1>-->
-<!--</div>-->
-<div class="section">
+<div class="section" id="section-1">
   <div class="contacts">
     <div class="items">
       <div class="frame-white contact">
@@ -45,6 +42,29 @@
   </div>
   <div class="maps-container">
     <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83910.12788392545!2d24.634728297302953!3d48.9117436993289!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4730c16c34b0381d%3A0xd6d32394e59e41c2!2sIvano-Frankivsk%2C%20Ivano-Frankivsk%20Oblast%2C%2076000!5e0!3m2!1sen!2sua!4v1703278889349!5m2!1sen!2sua" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+</div>
+
+<div class="section" id="section-2">
+  <h1 class="">Employees</h1>
+  <div class="emps">
+    <frame-light class="emp" *ngFor="let e of employees">
+      <div class="emp-content">
+        <div class="emp-part">
+          <img
+            class="emp-img"
+            [src]="getFirstImageOrDefault(e)"
+          />
+        </div>
+        <div class="emp-part">
+          <p class="emp-title">{{e.firstName}} {{e.lastName}} {{e.surName}}</p>
+        </div>
+        <div class="emp-part">
+          <p class="emp-subtitle">{{e.position}}</p>
+        </div>
+      </div>
+    </frame-light>
+
   </div>
 </div>
 
