--- a/frontend/src/app/components/frame-light/frame-light.component.css
+++ b/frontend/src/app/components/frame-light/frame-light.component.css
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: flex-start;
 
-  width: max-content;
-  height: max-content;
+  /*width: max-content;*/
+  /*height: max-content;*/
 
   text-align: center;
   border-radius: 30px;
@@ -16,5 +16,20 @@
 
 .frame-light {
   color: black;
+}
+
+.hr-hug {
+  width: max-content;
+}
+.hr-fill {
+  width: 100%;
+}
+
+.vr-hug {
+  height: max-content;
+}
+
+.vr-fill {
+  height: 100%;
 }
 
