--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -63,3 +63,29 @@ body{
 frame-light * {
   color: var(--sidebar-color);
 }
+
+app-create-feedback-dialog {
+  position: fixed;
+  left: calc(50% - 250px);
+  top: 15vh;
+  z-index: 1;
+}
+
+app-create-feedback-dialog::before {
+  content: "";
+  position: fixed;
+  left:0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  display: block;
+}
+
+.collapse {
+  display: none;
+}
+
+
+
