--- a/frontend/src/app/components/feedbacks/create-feedback-dialog/create-feedback-dialog.component.html
+++ b/frontend/src/app/components/feedbacks/create-feedback-dialog/create-feedback-dialog.component.html
@@ -24,8 +24,16 @@
     </div>
     <div class="dialog-part">
       <app-button
+        theme="light"
         value="Надіслати"
         (click)="onSubmit()"
+      />
+    </div>
+    <div class="dialog-part">
+      <app-button
+        theme="dark"
+        value="Закрити"
+        (click)="onClose()"
       />
     </div>
   </div>
