--- a/frontend/src/app/components/feedbacks/create-feedback-dialog/create-feedback-dialog.component.css
+++ b/frontend/src/app/components/feedbacks/create-feedback-dialog/create-feedback-dialog.component.css
@@ -1,3 +1,22 @@
+:host {
+  position: fixed;
+  left: calc(50% - 250px);
+  top: 15vh;
+  z-index: 1;
+}
+
+:host::before {
+  content: "";
+  position: fixed;
+  left:0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  display: block;
+}
+
 .dialog {
   display: flex;
   flex-direction: column;
