--- a/frontend/src/app/components/frame-light/frame-light.component.css
+++ b/frontend/src/app/components/frame-light/frame-light.component.css
@@ -1,16 +1,18 @@
+:host {
+  width: 100%;
+  height: 100%;
+}
+
 .frame-light {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-
-  /*width: max-content;*/
-  /*height: max-content;*/
-
   text-align: center;
   border-radius: 30px;
   padding: 20px;
-
+  width: 100%;
+  height: 100%;
   background-color: var(--text-color);
 }
 
@@ -21,15 +23,16 @@
 .hr-hug {
   width: max-content;
 }
+
 .hr-fill {
   width: 100%;
 }
 
 .vr-hug {
-  height: max-content;
+  width: max-content;
 }
 
 .vr-fill {
-  height: 100%;
+  width: 100%;
 }
 
