--- a/frontend/src/app/components/services/tree/tree.component.html
+++ b/frontend/src/app/components/services/tree/tree.component.html
@@ -9,6 +9,8 @@
       <app-tree
         [root]="child"
         class="sub"
+        (nodeClicked)="nodeClicked.emit($event)"
+        (nodeNotLeafClicked)="nodeNotLeafClicked.emit($event)"
         (nodeLeafClicked)="nodeLeafClicked.emit($event)"
       />
     </div>
