--- a/frontend/src/app/pages/feedbacks-page/feedbacks-page.component.html
+++ b/frontend/src/app/pages/feedbacks-page/feedbacks-page.component.html
@@ -15,6 +15,7 @@
   <div class="feedbacks">
     <frame-light
       hr="fill"
+      vr="fill"
       *ngFor="let f of feedbacks"
     >
       <div class="feedback">
