--- a/frontend/src/app/pages/aboutus/aboutus.component.html
+++ b/frontend/src/app/pages/aboutus/aboutus.component.html
@@ -62,7 +62,7 @@
         <div class="emp-part">
           <img
             class="emp-img"
-            [src]="e.getFirstImageOrDefault()"
+            [src]="employeeService.getFirstImageOrDefault(e)"
           />
         </div>
         <div class="emp-part">
