Modify AppointmentComponent and ViewEmployeeDialogComponent

--- a/frontend/src/app/components/aboutus/view-employee-dialog/view-employee-dialog.component.html
+++ b/frontend/src/app/components/aboutus/view-employee-dialog/view-employee-dialog.component.html
@@ -1,7 +1,7 @@
 <frame-light>
   <div class="dialog">
     <div class="dialog-part">
-      <img [src]="item.getFirstImageOrDefault()" width="200"/>
+      <img [src]="employeeService.getFirstImageOrDefault(item)" width="200"/>
     </div>
     <div class="dialog-part">
       <p class="dialog-text-title">Ім'я</p>
