--- a/backend/backend-ui/src/main/resources/templates/layout.html
+++ b/backend/backend-ui/src/main/resources/templates/layout.html
@@ -70,11 +70,9 @@
                 <strong>mdo</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" style="position: absolute; inset: auto auto 0px 0px; margin: 0px; transform: translate3d(0px, -34px, 0px);" data-popper-placement="top-start">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" th:href="@{/panel/logout}">Sign out</a></li>
+                <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
             </ul>
         </div>
   </nav>
